--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <title>Strength and courage</title>
-        <script src="frontend.js" defer></script>
-    </head>
-    <body>
-        <h1>
-             Yay
-        </h1>
-        <div id="app"></div>
-    </body>
+
+<head>
+    <title>Strength and courage</title>
+    <script src="frontend.js" type="module" defer></script>
+</head>
+
+<body>
+    <h1>
+        Yay
+    </h1>
+    <div id="app"></div>
+</body>
+
 </html>
